Split modules by Java version